<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/customer_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.yourstore.app.ui.customer.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_category"
            app:destination="@id/navigation_category"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_home_to_product_detail"
            app:destination="@id/navigation_product_detail"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_home_to_search"
            app:destination="@id/navigation_search"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_catalog"
        android:name="com.yourstore.app.ui.customer.catalog.CatalogFragment"
        android:label="@string/title_catalog"
        tools:layout="@layout/fragment_catalog">
        <action
            android:id="@+id/action_catalog_to_category"
            app:destination="@id/navigation_category" />
        <action
            android:id="@+id/action_catalog_to_search"
            app:destination="@id/navigation_search" />
    </fragment>

    <fragment
        android:id="@+id/navigation_category"
        android:name="com.yourstore.app.ui.customer.catalog.CategoryFragment"
        android:label="@string/title_category"
        tools:layout="@layout/fragment_category">
        <argument
            android:name="categoryId"
            app:argType="string" />
        <argument
            android:name="categoryName"
            app:argType="string" />
        <action
            android:id="@+id/action_category_to_product_detail"
            app:destination="@id/navigation_product_detail" />
    </fragment>

    <activity
        android:id="@+id/navigation_product_detail"
        android:name="com.yourstore.app.ui.customer.catalog.ProductDetailActivity"
        android:label="@string/title_product_detail"
        tools:layout="@layout/activity_product_detail">
        <argument
            android:name="productId"
            app:argType="string" />
    </activity>

    <activity
        android:id="@+id/navigation_search"
        android:name="com.yourstore.app.ui.customer.catalog.SearchActivity"
        android:label="@string/title_search"
        tools:layout="@layout/activity_search">
        <argument
            android:name="query"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
        <argument
            android:name="categoryId"
            app:argType="string"
            app:nullable="true" 
            android:defaultValue="@null" />
    </activity>

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.yourstore.app.ui.customer.cart.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart">
        <action
            android:id="@+id/action_cart_to_checkout"
            app:destination="@id/navigation_checkout" />
        <action
            android:id="@+id/action_cart_to_product_detail"
            app:destination="@id/navigation_product_detail" />
    </fragment>

    <activity
        android:id="@+id/navigation_checkout"
        android:name="com.yourstore.app.ui.customer.cart.CheckoutActivity"
        android:label="@string/title_checkout"
        tools:layout="@layout/activity_checkout" />

    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.yourstore.app.ui.customer.orders.OrdersFragment"
        android:label="@string/title_orders"
        tools:layout="@layout/fragment_orders">
        <action
            android:id="@+id/action_orders_to_order_detail"
            app:destination="@id/navigation_order_detail" />
    </fragment>

    <activity
        android:id="@+id/navigation_order_detail"
        android:name="com.yourstore.app.ui.customer.orders.OrderDetailActivity"
        android:label="@string/title_order_detail"
        tools:layout="@layout/activity_order_detail">
        <argument
            android:name="orderId"
            app:argType="string" />
    </activity>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.yourstore.app.ui.customer.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profile_to_edit_profile"
            app:destination="@id/navigation_edit_profile" />
        <action
            android:id="@+id/action_profile_to_address"
            app:destination="@id/navigation_address" />
    </fragment>

    <activity
        android:id="@+id/navigation_edit_profile"
        android:name="com.yourstore.app.ui.customer.profile.EditProfileActivity"
        android:label="@string/title_edit_profile"
        tools:layout="@layout/activity_edit_profile" />

    <activity
        android:id="@+id/navigation_address"
        android:name="com.yourstore.app.ui.customer.profile.AddressActivity"
        android:label="@string/title_address"
        tools:layout="@layout/activity_address">
        <argument
            android:name="addressId"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
    </activity>
</navigation>